--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
   padding-left: 2vw;
   height: 96vh;
   width: 15%;
-  box-shadow: 5px 5px 10px 2px rgba(109, 109, 109, 0.8);
+  box-shadow: 2px 0px 40px 1px rgba(192, 192, 192, 0.8);
   font-size: 2.5vh;
   position: relative; /* Add position relative for proper positioning */
 }
@@ -53,13 +53,14 @@
     margin-top: -35px;
   }
 }
-@media (max-width: 1000px) {
+@media (max-width: 800px) {
   .container {
     font-size: 2.3vh;
     background-color: #65656500;
     box-shadow: none;
-    width: 70vw;
+    width: 40vw;
     padding-left: 0vh;
+    margin-right: 0vh;
     margin-top: -26px;
     height: 100vh;
   }
