--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -19,6 +19,10 @@
   z-index:1000;
   margin-top: 20px;
 }
+.uwu{
+  text-decoration: none;
+  color: #000;
+}
 
 .nel {
   padding: 0.5vh;
@@ -30,6 +34,7 @@
   border-radius: 1vh;
   width: 80%;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .nel:hover {
