--- a/client/src/Components/Register/Register.css
+++ b/client/src/Components/Register/Register.css
@@ -1,4 +1,4 @@
-.full_page_register{
+.full_page_register {
     height: 100vh;
     width: 100%;
     background-color: #F0F2FF;
@@ -6,8 +6,9 @@
     align-items: center;
     justify-content: center;
 }
-.register_box{
-    height: 450px;
+
+.register_box {
+    height: 500px;
     width: 350px;
     padding: 20px;
     display: flex;
@@ -16,9 +17,52 @@
     border-radius: 23px;
     color: white;
 }
-.register_box input{
+
+.register_box h2 {
+    margin-top: 0px;
+}
+
+.register_box input {
     text-decoration: none;
     border-radius: 12px;
     border: none;
     padding: 10px;
+    z-index: 1;
+}
+
+.register_btn {
+    background-color: #71DDB1;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    width: 110px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.linkRegister {
+    font-size: 15px;
+}
+
+.linkRegister a {
+    color: white;
+}
+.password_field{
+    width: 100%;
+}
+.password-toggle-btn {
+    background: none;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    color: black;
+    font-size: 18px;
+    z-index: 100;
+    margin-left: -40px;
+}
+.password-input{
+    display: flex;
+    align-items: center;
 }
