--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -8,20 +8,16 @@
   height: 96vh;
   width: 15%;
   box-shadow: 2px 0px 40px 1px rgba(192, 192, 192, 0.8);
-  font-size: 2.5vh;
+  font-size: 1.25vw;
   position: relative; /* Add position relative for proper positioning */
 }
 
 .heading {
   color: #402ACC;
   font-weight: bold;
-  font-size: 3.2vh;
+  font-size: 1.75vw;
   z-index:1000;
   margin-top: 20px;
-}
-.uwu{
-  text-decoration: none;
-  color: #000;
 }
 
 .nel {
@@ -34,12 +30,12 @@
   border-radius: 1vh;
   width: 80%;
   cursor: pointer;
-  text-decoration: none;
+  text-decoration: none!important;
 }
 
 .nel:hover {
   background-color: #402ACC;
-  color: white;
+  color: white!important;
 }
 
 .sign {
@@ -60,13 +56,13 @@
 }
 @media (max-width: 800px) {
   .container {
-    font-size: 2.3vh;
+    font-size: 2.6vw;
     background-color: #65656500;
     box-shadow: none;
-    width: 40vw;
+    width: 55vw;
     padding-left: 0vh;
     margin-right: 0vh;
-    margin-top: -26px;
+    margin-top: -3vh;
     height: 100vh;
   }
 
@@ -101,8 +97,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 20px;
-    height: 20px;
+    width: 3vw;
+    height: 3vw;
     padding-right: 2vh;
     padding-left: 2vh;
     cursor: pointer;
