--- a/client/src/Components/DOCTOR/Navbar/Navbar.css
+++ b/client/src/Components/DOCTOR/Navbar/Navbar.css
@@ -7,6 +7,7 @@
   text-align: left;
   padding-left: 2vw;
   height: 96vh;
+  width: 15vw;
   box-shadow: 2px 0px 40px 1px rgba(192, 192, 192, 0.8);
   font-size: 1.25vw;
   position: fixed; 
