--- a/client/src/Components/Stock/StockCard/StockCard.css
+++ b/client/src/Components/Stock/StockCard/StockCard.css
@@ -48,3 +48,13 @@
         font-size: 2.5vw;
     }
 }
+
+.stock-quant{
+    width: 100px;
+}
+.new{
+    margin-left: 2vh;
+}
+.stockconf{
+    color: white;
+}
