--- a/client/src/Components/Bookings/DBookingsCard/DBookingsCard.css
+++ b/client/src/Components/Bookings/DBookingsCard/DBookingsCard.css
@@ -7,7 +7,6 @@
 }
 .bookcard-top {
   padding: 1vh;
-  width: 100%;
   background: linear-gradient(270deg, #71ddb1 -9.55%, #1a4fba 50%);
   display: flex;
   flex-direction: row;
@@ -35,6 +34,7 @@
 .book-accept:hover {
   background-color: rgb(142, 241, 157);
   color: rgb(0, 171, 34);
+  cursor: pointer;
 }
 
 .book-cancel {
@@ -45,6 +45,7 @@
 .book-cancel:hover {
   background-color: rgb(241, 142, 142);
   color: rgb(200, 0, 0);
+  cursor: pointer;
 }
 
 .bookcard-bottom {
@@ -70,3 +71,83 @@
         font-size: 2.5vw;
     }
 }
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(0, 75, 125);
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  color: white;
+}
+
+.Date{
+  padding: 1vh;
+  margin: 1vh;
+  border-radius: 0.5vh;
+  border: none;
+}
+
+.Date:focus{
+  outline: none !important;
+}
+
+.time{
+  padding: 1vh;
+  margin: 1vh;
+  margin-bottom: 2vh;
+  border-radius: 0.5vh;
+  border: none;
+}
+
+.time:focus{
+  outline: none !important;
+}
+
+.confirm{
+  background-color: #1596db;
+  padding: 1.5vh;
+  margin-top: 2vh;
+  font-size: 2vh;
+  border: none;
+  border-radius: 0.5vh;
+  color: white;
+}
+
+.confirm:hover{
+  cursor: pointer;
+  background-color: #00ba70;
+}
+
+.booking-heading{
+  padding: 2vh;
+  font-size: 3vh;
+}
+
+.book-update{
+  background-color: #411695;
+  margin-right: 0vh;
+}
+
+.book-update:hover{
+  cursor: pointer;
+  background-color: #8262c2;
+  color: #321273;
+  text-decoration: bold;
+}
+
+/* Add additional styling for date and time inputs, button, etc. */
