--- a/client/src/Components/Stock/StockCard/StockCard.css
+++ b/client/src/Components/Stock/StockCard/StockCard.css
@@ -7,12 +7,12 @@
 }
 .stockcard-top{
     padding: 1vh;
-    width: 100%;
+    width: 100.5%;
     background: linear-gradient(270deg, #71DDB1 -9.55%, #1A4FBA 50%);
     display: flex;
     flex-direction: row;
     align-items: center;
-    border-radius: 1.5vh;
+    border-radius: 1.5vh 1.5vh 0 0;
     color: rgb(255, 255, 255);
 }
 
@@ -27,6 +27,7 @@
 .stock-cancel:hover{
     background-color: rgb(241, 142, 142);
     color: rgb(200, 0, 0);
+    cursor: pointer;
 }
 
 .scard-right{
@@ -57,4 +58,10 @@
 }
 .stockconf{
     color: white;
+}
+.stockconf:hover{
+    cursor: pointer;
+}
+.stockk{
+    width:20px;
 }
