--- a/client/src/Components/Dashboard/Dashboard.css
+++ b/client/src/Components/Dashboard/Dashboard.css
@@ -1,11 +1,122 @@
-.dash-contain{
+.dashboard_container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
 }
 
-.header{
-    margin-top: 70px;
+.dashboard_box {
+    background: linear-gradient(270deg, #71DDB1 -9.55%, #1A4FBA 50%);
+    margin-top: 50px;
+    margin-left: 380px;
+    margin-right: 20px;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    text-align: center;
+    max-width: 1000px;
+    width: calc(100% - 40px);
+    height: 200px;
+    border-radius: 20px;
+    padding: 20px;
+    color: white;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
+.dashboard_content {
+    display: flex;
+    flex-direction: column;
+}
+
+.dashboard_content span {
+    margin-top: -10px;
+}
+
+.img_container {
+    display: flex;
+    align-items: center;
+    margin-top: -20px;
+}
+
+#book_app {
+    background-color: #71DDB1;
+    color: white;
+    padding: 10px;
+    font-size: 18px;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    width: 230px;
+}
+
+.card_container {
+    margin-top: 40px;
+    margin-left: 380px;
+    margin-right: 20px;
+    display: flex;
+    width: 900px;
+    height: 200px;
+}
+
+.dash_card {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 15px;
+    height: 160px;
+    width: 320px;
+    margin-right: 20px;
+    border-radius: 20px;
+    color: black;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
+.dash_card span {
+    font-size: 23px;
+}
+
+@media(max-width:1200px){
+    .dashboard_box{
+        width: 800px;
+        margin-left: 230px;
+    }
+    .card_container{
+        width: 800px;
+        margin-left: 230px;
+    }
+}
+@media(max-width:1092px){
+    .dashboard_box{
+        width: 700px;
+        margin-left: 230px;
+    }
+    .card_container{
+        width: 700px;
+        margin-left: 230px;
+    }
+}
+@media(max-width:982px){
+    .dashboard_box{
+        width: 500px;
+        height: 300px;
+        margin-left: 230px;
+    }
+    .card_container{
+        width: 500px;
+        margin-left: 230px;
+    }
+}
+@media(max-width:800px){
+    .dashboard_box,.card_container{
+        margin-left: 150px;
+    }
+}
+@media(max-width:707px){
+    .dashboard_box,.card_container{
+        margin-left: 80px;
+    }
+}
+@media(max-width:642px){
+    .dashboard_box,.card_container{
+        font-size: 15px;
+    }
 }
