--- a/client/src/Components/Records/DRecordsCard/DRecordsCard.css
+++ b/client/src/Components/Records/DRecordsCard/DRecordsCard.css
@@ -44,3 +44,36 @@
 .prescription-content:focus{
     outline: none;
 }
+
+.prescription-content {
+    width: 80vh;
+    height: 20vh;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #f2f2f2;
+  }
+  
+  .popup-buttons button {
+    padding: 2vh;
+    margin: 1vh;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .sub{
+    background-color: #1e6908;
+    color: white;
+  }
+  .can{
+    background-color: rgb(155, 18, 18);
+    color: white;
+  }
+  
+  .popup-buttons button:hover {
+    background-color: #007bff;
+    color: white;
+  }
+  
