--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -21,16 +21,18 @@
   border-radius: 10px;
   font-weight: bold;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 12px;
   margin-bottom: 10px;
 }
 
 .heading {
   color: #402ACC;
   font-weight: bold;
-  font-size: 1.75vw;
+  font-size: 20px;
   z-index:1000;
   margin-top: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 .nel {
