--- a/client/src/Components/Dashboard/Dashboard.css
+++ b/client/src/Components/Dashboard/Dashboard.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     height: 100vh;
     width: 100%;
+    scroll-behavior: none;
+    overflow: hidden;
 }
 
 .dashboard_box {
@@ -15,7 +17,7 @@
     align-items: center;
     max-width: 1000px;
     width: calc(100% - 40px);
-    height: 200px;
+    height: fit-content!important;
     border-radius: 20px;
     padding: 20px;
     color: white;
@@ -135,6 +137,41 @@
     display: flex;
     align-items: center;
     margin-top: -20px;
+}
+
+@media(max-width:1200px){
+    .img_container {
+        display: flex;
+        align-items: center;
+        margin-top: -20px;
+    }
+
+    .dashboard_box {
+        display: flex;
+        flex-direction: column;
+        width: 45vh!important;
+        margin-top: 15vh;
+        border-radius: 20px;
+        padding: 20px;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    }
+
+    .patimg{
+        display: none;
+    }
+
+    .card_container{
+        display: flex;
+        flex-direction: column;
+        height: fit-content;
+    }
+
+    .dash_card{
+        margin: 2vh;
+    }
 }
 
 #book_app {
